# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api/v1
 definitions:
+  auth.RqChangePassword:
+    properties:
+      new_password:
+        minLength: 8
+        type: string
+      old_password:
+        type: string
+    required:
+    - new_password
+    - old_password
+    type: object
   auth.RqLogin:
     properties:
       email:
@@ -12,6 +23,13 @@ definitions:
     - email
     - password
     type: object
+  auth.RqLogout:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
   auth.RqUpdateUser:
     properties:
       email:
@@ -22,11 +40,6 @@ definitions:
         type: string
       phone:
         type: string
-    required:
-    - email
-    - first_name
-    - last_name
-    - phone
     type: object
   auth.RqUser:
     properties:
@@ -1463,29 +1476,6 @@ paths:
       summary: Login a user
       tags:
       - auth
-  /auth/logout:
-    post:
-      consumes:
-      - application/json
-      description: revoke the current session using the refresh token
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.RsBase'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.RsError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.RsError'
-      summary: Logout a user
-      tags:
-      - auth
   /auth/register:
     post:
       consumes:
@@ -1543,6 +1533,74 @@ paths:
       summary: Delete user account
       tags:
       - auth
+  /auth/user/change-password:
+    put:
+      consumes:
+      - application/json
+      description: updates the password for the authenticated user
+      parameters:
+      - description: Password Change Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RqChangePassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.RsBase'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.RsError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/response.RsError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.RsError'
+      security:
+      - BearerToken: []
+      summary: Change user password
+      tags:
+      - auth
+  /auth/user/logout:
+    post:
+      consumes:
+      - application/json
+      description: revoke the current session using the refresh token
+      parameters:
+      - description: Logout Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RqLogout'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.RsBase'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.RsError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.RsError'
+      security:
+      - BearerToken: []
+      summary: Logout a user
+      tags:
+      - auth
   /auth/user/profile:
     put:
       consumes:
@@ -1568,6 +1626,10 @@ paths:
             $ref: '#/definitions/response.RsError'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.RsError'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/response.RsError'
         "500":
